[package]
name = "cargobase"
version = "0.1.1"
edition = "2021"
authors = ["Giuseppe Gelardi <giuseppegelardi@icloud.com>"]
license = "MIT"
description = "A local, in-memory, and file-based key-value store."
homepage = "https://github.com/giuseppe-g-gelardi/cargobase"
repository = "https://github.com/giuseppe-g-gelardi/cargobase"
documentation = "TODO: https://docs.rs/cargobase"
readme = "README.md"
keywords = ["key-value", "store", "database", "in-memory", "file-based", "utility", "local", "rust"]
categories = ["data-management", "development-tools", "utilities", "database"]
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["raw_value"] }
serde_derive = "1.0.188"
serde-reflection = "0.4.0"
base64 = "0.22.1"
tokio = { version = "1", features = ["full"] }
uuid = {version ="1.11.0", features = ["v4"] }
thiserror = "2.0.3"
tempfile = "3.14.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cargobase"
path = "main.rs"
