[package]
name = "cargobase"
version = "0.1.1"
edition = "2021"

[dependencies]
cargobase-core = { path = "../cargobase-core/"}
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
serde-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }

[features]
default = ["sync"]
sync = []


# serde = { version = "1.0.215", features = ["derive"] }
# serde_json = { version = "1.0.132", features = ["raw_value"] }
# serde_derive = "1.0.188"
# # base64 = "0.22.1"
# # tokio = { version = "1", features = ["full"], optional = true}
# uuid = {version ="1.11.0", features = ["v4"] }
# thiserror = "2.0.3"
# tempfile = "3.14.0"
# serde-reflection = "0.4.0"
# tracing = "0.1"
# tracing-subscriber = "0.3"
# tracing-test = "0.2.5"
