[package]
name = "cargobase_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
serde = { workspace = true } 
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[features]
default = []

