[package]
name = "logg"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
tracing = { version = "0.1", optional = true }

[features]
default = [] # no logging
logging = [] # logging with println macro
tracing = ["dep:tracing"] # logging with tracing crate

# [lib]
# path = "src/lib.rs"
